--- a/aegis_start/options.html
+++ b/aegis_start/options.html
@@ -86,7 +86,7 @@
         <div>
           <div class="kv">
             <div>API Base URL</div>
-            <input type="text" id="opt-api-base" placeholder="https://aegis.builders" />
+            <input type="text" id="opt-api-base" placeholder="https://api.aegis.builders" />
           </div>
       </div>
 
