fix(bot): file changed

--- a/aegis_start/popup.html
+++ b/aegis_start/popup.html
@@ -576,6 +576,20 @@
         <div class="content">
           <section id="view-home">
             <div class="analysis-card" id="main-analysis-card">
+                       <!-- Ссыль на бота -->
+        <div class="analysis-card" style="margin-top: 12px; display: flex; align-items: center; justify-content: space-between; padding: 12px 16px;">
+  <div style="display: flex; align-items: center; gap: 12px;">
+    <div style="width: 36px; height: 36px; background: var(--primary-soft); border-radius: 10px; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M20.665 3.333L3.333 10.665L9.333 13.333L18.665 5.333L11.333 15.333L18.665 20.665L20.665 3.333Z" stroke="#2563EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </div>
+    
+    <div style="display: flex; flex-direction: column;">
+      <span style="font-weight: 600; font-size: 13px; color: var(--text);">Telegram Бот</span>
+      <span class="muted" style="font-size: 11px;">Уведомления и защита</span>
+    </div>
+  </div>
               <div class="status-row">
                 <div class="status-text" id="status-text">Готово</div>
                 <div class="badge ready" id="analysis-badge">READY</div>
