--- a/aegis_start/sidepanel.html
+++ b/aegis_start/sidepanel.html
@@ -28,6 +28,21 @@
         margin: 0;
         padding: 0;
       }
+      .bot-card {
+      cursor: pointer;
+      transition: all 0.2s ease;
+      }
+
+    .bot-card:hover {
+        background: var(--surface-alt);
+        border-color: var(--primary);
+        transform: translateY(-1px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+
+    .bot-card:active {
+        transform: translateY(0);
+      }
 
       body {
         margin: 0;
@@ -629,19 +644,20 @@
               <p class="muted" id="warning-text">Подробности появятся здесь.</p>
             </div>
           </div>
-          <div class="analysis-card" style="margin-top: 12px; display: flex; align-items: center; justify-content: space-between; padding: 12px 16px;">
-            <div style="display: flex; align-items: center; gap: 12px;">
-              <div style="width: 36px; height: 36px; background: var(--primary-soft); border-radius: 10px; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
-                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M20.665 3.333L3.333 10.665L9.333 13.333L18.665 5.333L11.333 15.333L18.665 20.665L20.665 3.333Z" stroke="#2563EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </div>
-          <div style="display: flex; flex-direction: column;">
-            <span style="font-weight: 600; font-size: 13px; color: var(--text);">Telegram Бот</span>
-              <span class="muted" style="font-size: 11px;">Уведомления и защита</span>
-          </div>
-          </div>
-        </section>
+     <div class="analysis-card bot-card" id="open-telegram-bot" style="margin-top: 12px; padding: 12px 16px;">
+    <div style="display: flex; align-items: center; gap: 12px;">
+      <div style="width: 36px; height: 36px; background: rgba(59,130,246,0.1); border-radius: 10px; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M20.665 3.333L3.333 10.665L9.333 13.333L18.665 5.333L11.333 15.333L18.665 20.665L20.665 3.333Z" stroke="#2563EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
+      <div style="display: flex; flex-direction: column; justify-content: center;">
+        <span style="font-weight: 600; font-size: 13px; color: var(--text);">Telegram Бот</span>
+        <span class="muted" style="font-size: 11px; margin-top: 2px;">Уведомления и защита</span>
+      </div>
+    </div>
+  </div>
+</section>
 
         <section id="view-settings" class="section">
           <div class="section-title">Защита</div>
