--- a/aegis-website/dev/index.html
+++ b/aegis-website/dev/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Главная</a></li>
                 <li><a href="#features" class="nav-link">Возможности</a></li>
+                <li><a href="#demo" class="nav-link">Демо</a></li>
                 <li><a href="#pricing" class="nav-link">Тарифы</a></li>
                 <li><a href="#contact" class="nav-link">Контакты</a></li>
             </ul>
@@ -44,8 +45,8 @@
                     Мощная система безопасности с проверкой в реальном времени.
                 </p>
                 <div class="hero-actions">
-                    <a href="#pricing" class="btn btn-primary">Начать защиту</a>
-                    <a href="#features" class="btn btn-secondary">Узнать больше</a>
+                    <a href="https://chromewebstore.google.com/detail/bedaaeaeddnodmmkfmfealepbbbdoegl" target="_blank" class="btn btn-primary">Установить расширение</a>
+                    <a href="#pricing" class="btn btn-secondary">Выбрать тариф</a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat-item">
@@ -69,54 +70,176 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Мощные возможности защиты</h2>
+                <h2 class="section-title">Технологии защиты</h2>
                 <p class="section-description">
-                    Комплексная система безопасности для вашего браузера
+                    Многоуровневая система безопасности на базе передовых алгоритмов и глобальных баз угроз
                 </p>
             </div>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">🌐</div>
-                    <h3 class="feature-title">Проверка URL</h3>
-                    <p class="feature-description">
-                        Мгновенная проверка ссылок на фишинг, вредоносные сайты и подозрительный контент
+            <div class="features-list">
+                <div class="feature-item">
+                    <div class="feature-number">01</div>
+                    <div class="feature-content">
+                        <div class="feature-header">
+                            <h3 class="feature-title">Анализ URL в реальном времени</h3>
+                            <div class="feature-badge">ML-анализ</div>
+                        </div>
+                        <p class="feature-description">
+                            Мгновенная проверка ссылок с использованием алгоритмов машинного обучения и эвристического анализа. Обнаружение фишинга, вредоносного контента и подозрительных ресурсов до перехода по ссылке.
+                        </p>
+                        <div class="feature-tech">
+                            <span class="tech-tag">Эвристика</span>
+                            <span class="tech-tag">ML-модели</span>
+                            <span class="tech-tag">Поведенческий анализ</span>
+                        </div>
+                    </div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 2L4 7V10C4 15.55 7.16 20.74 12 22C16.84 20.74 20 15.55 20 10V7L12 2Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M9 12L11 14L15 10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-number">02</div>
+                    <div class="feature-content">
+                        <div class="feature-header">
+                            <h3 class="feature-title">Многоуровневая проверка файлов</h3>
+                            <div class="feature-badge">Multi-engine</div>
+                        </div>
+                        <p class="feature-description">
+                            Комплексный анализ загружаемых файлов через интеграцию с ведущими антивирусными движками. Статический и динамический анализ с использованием сигнатурных баз и поведенческих методов обнаружения.
+                        </p>
+                        <div class="feature-tech">
+                            <span class="tech-tag">Статический анализ</span>
+                            <span class="tech-tag">Sandbox</span>
+                            <span class="tech-tag">Сигнатурные базы</span>
+                        </div>
+                    </div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M14 2V8H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12 18V14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M9 16H15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-number">03</div>
+                    <div class="feature-content">
+                        <div class="feature-header">
+                            <h3 class="feature-title">Антифишинговая защита</h3>
+                            <div class="feature-badge">Real-time</div>
+                        </div>
+                        <p class="feature-description">
+                            Продвинутое обнаружение поддельных сайтов и защита от социальной инженерии. Анализ доменных имен, визуального сходства и поведенческих паттернов с использованием актуальной базы известных фишинговых ресурсов.
+                        </p>
+                        <div class="feature-tech">
+                            <span class="tech-tag">Доменный анализ</span>
+                            <span class="tech-tag">Визуальное сравнение</span>
+                            <span class="tech-tag">Поведенческие паттерны</span>
+                        </div>
+                    </div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M7 11V7C7 5.67392 7.52678 4.40215 8.46447 3.46447C9.40215 2.52678 10.6739 2 12 2C13.3261 2 14.5979 2.52678 15.5355 3.46447C16.4732 4.40215 17 5.67392 17 7V11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12 16V18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-number">04</div>
+                    <div class="feature-content">
+                        <div class="feature-header">
+                            <h3 class="feature-title">Высокая производительность</h3>
+                            <div class="feature-badge">Low-latency</div>
+                        </div>
+                        <p class="feature-description">
+                            Оптимизированная архитектура с минимальной задержкой проверки. Асинхронная обработка запросов и кэширование результатов обеспечивают защиту без замедления работы браузера.
+                        </p>
+                        <div class="feature-tech">
+                            <span class="tech-tag">Асинхронная обработка</span>
+                            <span class="tech-tag">Кэширование</span>
+                            <span class="tech-tag">Оптимизация запросов</span>
+                        </div>
+                    </div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13 2L3 14H12L11 22L21 10H12L13 2Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-number">05</div>
+                    <div class="feature-content">
+                        <div class="feature-header">
+                            <h3 class="feature-title">Глобальная база угроз</h3>
+                            <div class="feature-badge">Multi-source</div>
+                        </div>
+                        <p class="feature-description">
+                            Интеграция с VirusTotal, Google Safe Browsing, Yandex Safe Browsing и другими проверенными источниками. Агрегация данных из множества баз угроз для максимального покрытия и актуальности информации.
+                        </p>
+                        <div class="feature-tech">
+                            <span class="tech-tag">VirusTotal API</span>
+                            <span class="tech-tag">Safe Browsing</span>
+                            <span class="tech-tag">Агрегация данных</span>
+                        </div>
+                    </div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M2 12H22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12 2C15.31 2 18.31 3.43 20.31 5.69C22.31 7.95 23.31 10.9 23.31 14C23.31 17.1 22.31 20.05 20.31 22.31C18.31 24.57 15.31 26 12 26" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Demo Section -->
+    <section id="demo" class="demo">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Попробуйте анализ по наведению</h2>
+                <p class="section-description">
+                    Наведите курсор на ссылки ниже, чтобы увидеть анализ безопасности в действии
+                </p>
+            </div>
+            <div class="demo-links">
+                <div class="demo-link-card safe">
+                    <div class="demo-link-header">
+                        <span class="demo-badge safe">Безопасно</span>
+                        <h3>Пример безопасной ссылки</h3>
+                    </div>
+                    <a href="https://www.google.com" target="_blank" class="demo-link" data-url="https://www.google.com">
+                        https://www.google.com
+                    </a>
+                    <div class="demo-link-indicator" style="display: none;"></div>
+                    <p class="demo-description">
+                        Наведите курсор на ссылку, чтобы увидеть анализ безопасности в реальном времени
                     </p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">📁</div>
-                    <h3 class="feature-title">Анализ файлов</h3>
-                    <p class="feature-description">
-                        Проверка загружаемых файлов на вирусы и вредоносное ПО через несколько антивирусных движков
+                <div class="demo-link-card dangerous">
+                    <div class="demo-link-header">
+                        <span class="demo-badge dangerous">Опасно</span>
+                        <h3>Пример опасной ссылки</h3>
+                    </div>
+                    <a href="https://testsafebrowsing.appspot.com/s/malware.html" target="_blank" class="demo-link" data-url="https://testsafebrowsing.appspot.com/s/malware.html">
+                        https://testsafebrowsing.appspot.com/s/malware.html
+                    </a>
+                    <div class="demo-link-indicator" style="display: none;"></div>
+                    <p class="demo-description">
+                        Тестовая ссылка Google Safe Browsing для демонстрации обнаружения угроз. Наведите курсор, чтобы увидеть предупреждение
                     </p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🔒</div>
-                    <h3 class="feature-title">Защита от фишинга</h3>
-                    <p class="feature-description">
-                        Обнаружение поддельных сайтов и защита от кражи личных данных
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3 class="feature-title">Быстрая работа</h3>
-                    <p class="feature-description">
-                        Оптимизированная архитектура обеспечивает минимальную задержку при проверке
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🌍</div>
-                    <h3 class="feature-title">Глобальная база</h3>
-                    <p class="feature-description">
-                        Интеграция с VirusTotal, Google Safe Browsing и другими проверенными источниками
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">📊</div>
-                    <h3 class="feature-title">Детальная статистика</h3>
-                    <p class="feature-description">
-                        Полная информация о проверенных ресурсах и истории угроз
-                    </p>
-                </div>
+            </div>
+            <div class="demo-install">
+                <p>Не установлено расширение?</p>
+                <a href="https://chromewebstore.google.com/detail/bedaaeaeddnodmmkfmfealepbbbdoegl" target="_blank" class="btn btn-primary">
+                    Установить расширение AEGIS
+                </a>
             </div>
         </div>
     </section>
@@ -140,11 +263,11 @@
                         </div>
                     </div>
                     <ul class="pricing-features">
-                        <li>✅ Неограниченная проверка URL</li>
-                        <li>✅ Проверка файлов</li>
-                        <li>✅ Защита от фишинга</li>
-                        <li>✅ Приоритетная поддержка</li>
-                        <li>✅ Обновления в реальном времени</li>
+                        <li><span class="feature-highlight">Анализ по наведению</span></li>
+                        <li>Проверка файлов</li>
+                        <li>Защита от фишинга</li>
+                        <li>Приоритетная поддержка</li>
+                        <li>Обновления в реальном времени</li>
                     </ul>
                     <button class="btn btn-primary btn-block" onclick="initiatePayment('monthly', 150)">
                         Выбрать план
@@ -160,11 +283,11 @@
                         </div>
                     </div>
                     <ul class="pricing-features">
-                        <li>✅ Все возможности месячного плана</li>
-                        <li>✅ Бессрочная лицензия</li>
-                        <li>✅ Без ежемесячных платежей</li>
-                        <li>✅ Пожизненная поддержка</li>
-                        <li>✅ Все будущие обновления</li>
+                        <li>Все возможности месячного плана</li>
+                        <li>Бессрочная лицензия</li>
+                        <li>Без ежемесячных платежей</li>
+                        <li>Пожизненная поддержка</li>
+                        <li>Все будущие обновления</li>
                     </ul>
                     <button class="btn btn-primary btn-block" onclick="initiatePayment('forever', 500)">
                         Выбрать план
@@ -186,7 +309,12 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
-                        <div class="contact-icon">📧</div>
+                        <div class="contact-icon">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M22 6L12 13L2 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
                         <div>
                             <h4>Email</h4>
                             <p>aegisshieldos@gmail.com</p>
@@ -217,7 +345,15 @@
                 <h2>Оплата подписки</h2>
             </div>
             <div class="modal-body">
-                <div id="paymentStatus" class="payment-status">
+                <div id="paymentForm" class="payment-form">
+                    <div class="form-group">
+                        <label for="userEmail">Email</label>
+                        <input type="email" id="userEmail" placeholder="your@email.com" required>
+                        <small class="form-hint">На этот email будет отправлен лицензионный ключ</small>
+                    </div>
+                    <button class="btn btn-primary btn-block" onclick="processPayment()">Продолжить оплату</button>
+                </div>
+                <div id="paymentStatus" class="payment-status" style="display: none;">
                     <div class="spinner"></div>
                     <p>Создание платежа...</p>
                 </div>
@@ -236,7 +372,6 @@
         </div>
     </div>
 
-    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
