refactor: rename aegis to avqon and normalize project structure

--- a/avqon-website/index.html
+++ b/avqon-website/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AEGIS - Защита вашего браузера</title>
-    <meta name="description" content="AEGIS - современная система защиты браузера от вредоносных сайтов, файлов и фишинга">
+    <title>AVQON - Защита вашего браузера</title>
+    <meta name="description" content="AVQON (Adaptive Verification & Qualitative Observation Node) - современная система защиты браузера от вредоносных сайтов, файлов и фишинга">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <span class="brand-name">AEGIS</span>
+                <span class="brand-name">AVQON</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Главная</a></li>
@@ -37,9 +37,12 @@
             <div class="hero-content">
                 <div class="hero-badge">Защита нового поколения</div>
                 <h1 class="hero-title">
-                    AEGIS — ваш щит<br>
+                    AVQON — ваш щит<br>
                     в цифровом мире
                 </h1>
+                <p class="hero-subtitle" style="font-size: 0.9em; opacity: 0.8; margin-top: 10px;">
+                    Adaptive Verification & Qualitative Observation Node
+                </p>
                 <p class="hero-description">
                     Защитите свой браузер от вредоносных сайтов, фишинга и опасных файлов. 
                     Мощная система безопасности с проверкой в реальном времени.
@@ -238,7 +241,7 @@
             <div class="demo-install">
                 <p>Не установлено расширение?</p>
                 <a href="https://chromewebstore.google.com/detail/bedaaeaeddnodmmkfmfealepbbbdoegl" target="_blank" class="btn btn-primary">
-                    Установить расширение AEGIS
+                    Установить расширение AVQON
                 </a>
             </div>
         </div>
@@ -317,7 +320,7 @@
                         </div>
                         <div>
                             <h4>Email</h4>
-                            <p>aegisshieldos@gmail.com</p>
+                            <p>support@avqon.com</p>
                         </div>
                     </div>
                 </div>
@@ -330,9 +333,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <span class="brand-name">AEGIS</span>
+                    <span class="brand-name">AVQON</span>
                 </div>
-                <p class="footer-text">© 2025 AEGIS. Все права защищены.</p>
+                <p class="footer-text">© 2025 AVQON. Все права защищены.</p>
             </div>
         </div>
     </footer>
