--- a/avqon-website/index.html
+++ b/avqon-website/index.html
@@ -333,7 +333,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <span class="brand-name">AVQON</span>
+                    <a href="https://avqon.com" style="text-decoration: none; color: inherit;">
+                        <span class="brand-name">AVQON</span>
+                    </a>
                 </div>
                 <p class="footer-text">© 2025 AVQON. Все права защищены.</p>
             </div>
