--- a/avqon_start/options.html
+++ b/avqon_start/options.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Aegis — Настройки</title>
+    <title>AVQON — Настройки</title>
     <link rel="icon" type="image/png" href="icons/logo.png" />
     <style>
       :root { --bg: #0b1020; --card: #131a2b; --muted: #93a0c0; --text: #e6ecff; --primary: #4f8cff; --success: #2ecc71; --danger: #ff5c5c; }
@@ -36,7 +36,7 @@
   <body>
     <script src="config.js"></script>
     <div class="wrap">
-      <h1>Aegis — Настройки</h1>
+      <h1>AVQON — Настройки</h1>
       <p class="desc">Управляйте тем, как расширение проверяет сайты и загрузки.</p>
 
       <div class="card grid">
@@ -87,7 +87,7 @@
         <div>
           <div class="kv">
             <div>API Base URL</div>
-            <input type="text" id="opt-api-base" placeholder="https://api.aegis.builders" />
+            <input type="text" id="opt-api-base" placeholder="https://prod.avqon.com" />
           </div>
       </div>
 
@@ -144,7 +144,7 @@
             <div><strong>Email:</strong> <span id="account-email"></span></div>
           </div>
           <div style="display: grid; gap: 8px; margin-bottom: 12px;">
-            <input type="text" id="account-api-key" placeholder="API ключ (покупка через сайт AEGIS)" />
+            <input type="text" id="account-api-key" placeholder="API ключ (покупка через сайт AVQON)" />
             <button class="btn" id="account-save-api-key-btn">Сохранить API ключ</button>
           </div>
           <button class="btn" id="logout-btn">Выйти</button>
