--- a/avqon_start/popup.html
+++ b/avqon_start/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Aegis</title>
+    <title>AVQON</title>
     <link rel="icon" type="image/png" href="icons/logo.png" />
     <style>
       :root {
@@ -521,11 +521,11 @@
       <header class="hero">
         <div class="brand">
           <div class="logo">
-            <img src="icons/logo.png" alt="Aegis logo" />
+            <img src="icons/logo.png" alt="AVQON logo" />
           </div>
           <div>
             <p class="eyebrow">Защита браузера</p>
-            <h1>Aegis</h1>
+            <h1>AVQON</h1>
           </div>
         </div>
         <span class="badge ready" id="status-badge">READY</span>
@@ -644,7 +644,7 @@
                 </div>
                 <div class="form-field">
                   <label for="account-api-key-popup">API ключ</label>
-                  <input type="text" id="account-api-key-popup" placeholder="API ключ (покупка через сайт AEGIS)" />
+                  <input type="text" id="account-api-key-popup" placeholder="API ключ (покупка через сайт AVQON)" />
                   <button type="button" class="btn primary" id="account-save-api-key-popup-btn" style="margin-top: 8px; width: 100%;">Сохранить API ключ</button>
                 </div>
                 <div class="actions">
@@ -738,14 +738,14 @@
           <section id="view-about" style="display:none;">
             <div class="section-title">О проекте</div>
             <div class="card" style="box-shadow:none;">
-              <p>Aegis — современное расширение для анализа ссылок, файлов и загрузок в реальном времени. Мы защищаем от фишинга, вредоносного ПО и подозрительных ресурсов.</p>
+              <p>AVQON — современное расширение для анализа ссылок, файлов и загрузок в реальном времени. Мы защищаем от фишинга, вредоносного ПО и подозрительных ресурсов.</p>
               <ul style="padding-left:18px; margin:12px 0; color: var(--muted);">
                 <li>Анализ URL в реальном времени</li>
                 <li>Проверка по наведению</li>
                 <li>Уведомления об угрозах</li>
                 <li>Приватный режим работы</li>
               </ul>
-              <p>Версия: <strong>Aegis 1.0.1</strong></p>
+              <p>Версия: <strong>AVQON 1.0.6</strong></p>
               <p><a class="link" id="open-logs" href="#">Посмотреть логи расширения</a></p>
             </div>
           </section>
@@ -753,7 +753,7 @@
       </section>
 
       <div class="footer">
-        <span>&copy; 2024 Aegis</span>
+        <span>&copy; 2026 AVQON</span>
         <span>Безопасный веб</span>
       </div>
     </div>
@@ -766,7 +766,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Aegis</title>
+    <title>AVQON</title>
     <style>
       :root { --bg: #0b1020; --card: #131a2b; --muted: #93a0c0; --text: #e6ecff; --primary: #4f8cff; --success: #2ecc71; --warn: #f1c40f; --danger: #ff5c5c; }
       * { box-sizing: border-box; }
@@ -850,8 +850,8 @@
   <body>
     <div class="container">
       <div class="header">
-        <img class="logo" src="icons/logo.png" alt="Aegis" />
-        <div class="title">Aegis</div>
+        <img class="logo" src="icons/logo.png" alt="AVQON" />
+        <div class="title">AVQON</div>
       </div>
 
       <!-- Antivirus Toggle Section -->
@@ -1018,14 +1018,14 @@
           <section id="view-about" style="display:none;">
             <div class="analysis-card">
               <div class="muted" style="margin-bottom:6px;">О проекте</div>
-              <div> Aegis — расширение для безопасного серфинга: анализ URL, подсказки по наведению, уведомления об угрозах. Мы не перехватываем личные данные, работаем только с проверками выбранных ссылок. </div>
+              <div> AVQON — расширение для безопасного серфинга: анализ URL, подсказки по наведению, уведомления об угрозах. Мы не перехватываем личные данные, работаем только с проверками выбранных ссылок. </div>
             </div>
           </section>
         </div>
         </div>
       </div>
       <div class="footer">
-        <span class="muted">Aegis 1.0.1</span>
+        <span class="muted">AVQON 1.0.6</span>
         <a class="link" id="open-logs" href="#">Логи</a>
       </div>
     </div>
