--- a/avqon_start/sidepanel.html
+++ b/avqon_start/sidepanel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AEGIS Side Panel</title>
+    <title>AVQON Side Panel</title>
     <style>
       :root {
         --bg: #0A0E1A;
@@ -600,7 +600,7 @@
       <header class="header">
         <div class="brand" style="flex: 1; display: flex; justify-content: center;">
           <div class="brand-text" style="text-align: center;">
-            <h1>AEGIS</h1>
+            <h1>AVQON</h1>
           </div>
         </div>
       </header>
@@ -652,8 +652,8 @@
         </svg>
       </div>
       <div style="display: flex; flex-direction: column; justify-content: center;">
-        <span style="font-weight: 600; font-size: 13px; color: var(--text);">Сайт AEGIS</span>
-        <span class="muted" style="font-size: 11px; margin-top: 2px;">Перейти на сайт AEGIS</span>
+        <span style="font-weight: 600; font-size: 13px; color: var(--text);">Сайт AVQON</span>
+        <span class="muted" style="font-size: 11px; margin-top: 2px;">Перейти на сайт AVQON</span>
       </div>
     </div>
   </div>
@@ -665,7 +665,7 @@
             <div class="toggle-row">
               <div class="toggle-label">
                 <strong>Главная защита</strong>
-                <span>Включает/выключает AEGIS</span>
+                <span>Включает/выключает AVQON</span>
               </div>
               <label class="switch">
                 <input type="checkbox" id="antivirus-toggle" checked />
@@ -693,7 +693,7 @@
               <p class="muted" id="account-email" style="font-size: 10px; margin-bottom: 8px;">admin@example.com</p>
               <div class="form-field" style="margin-top: 12px;">
                 <label for="account-api-key-sidepanel" style="font-size: 11px;">API ключ</label>
-                <input type="text" id="account-api-key-sidepanel" placeholder="API ключ (покупка через сайт AEGIS)" style="width: 100%; margin-top: 4px;" />
+                <input type="text" id="account-api-key-sidepanel" placeholder="API ключ (покупка через сайт AVQON)" style="width: 100%; margin-top: 4px;" />
                 <button type="button" class="btn primary" id="account-save-api-key-sidepanel-btn" style="margin-top: 8px; width: 100%; font-size: 11px; padding: 6px 12px;">Сохранить API ключ</button>
               </div>
               <div class="actions">
@@ -732,7 +732,7 @@
               </div>
               <div class="form-field">
                 <label for="register-api-key">API ключ (опционально)</label>
-                <input type="text" id="register-api-key" placeholder="Покупка через сайт AEGIS" />
+                <input type="text" id="register-api-key" placeholder="Покупка через сайт AVQON" />
               </div>
               <div class="actions">
                 <button type="button" class="btn primary" id="register-btn">Зарегистрироваться</button>
@@ -785,10 +785,10 @@
         </section>
 
         <section id="view-about" class="section">
-          <div class="section-title">О проекте AEGIS</div>
+          <div class="section-title">О проекте AVQON</div>
           <div class="card">
             <p style="font-size: 11px; line-height: 1.5; margin-bottom: 8px;">
-              AEGIS — современное расширение для безопасного серфинга. Мы анализируем URL, ссылки по наведению и загрузки, чтобы вовремя предупредить о фишинге и вредоносных ресурсах.
+              AVQON — современное расширение для безопасного серфинга. Мы анализируем URL, ссылки по наведению и загрузки, чтобы вовремя предупредить о фишинге и вредоносных ресурсах.
             </p>
             <ul style="padding-left: 16px; margin: 8px 0; font-size: 11px; color: var(--text-muted); line-height: 1.6;">
               <li>URL и hover-анализ в реальном времени</li>
@@ -797,7 +797,7 @@
               <li>Приватность и локальные эвристики</li>
             </ul>
             <p style="font-size: 11px; margin-top: 8px;">
-              Версия: <strong>AEGIS 1.0.1</strong>
+              Версия: <strong>AVQON 1.0.6</strong>
             </p>
             <p style="margin-top: 8px;">
               <a class="link" id="open-logs" href="#">Посмотреть логи расширения</a>
@@ -807,8 +807,8 @@
       </div>
 
       <footer class="footer">
-        <span>&copy; 2024 AEGIS</span>
-        <span>Безопасный веб</span>
+        <span>&copy; 2026 AVQON</span>
+        <span>Безопасный WEB</span>
       </footer>
     </div>
 
