--- a/avqon-website/index.html
+++ b/avqon-website/index.html
@@ -262,7 +262,7 @@
                         <h3 class="pricing-name">Месячная подписка</h3>
                         <div class="pricing-price">
                             <span class="price-amount">150₽</span>
-                            <span class="price-period">/месяц</span>
+                            <span class="price-period">в месяц</span>
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -282,7 +282,7 @@
                         <h3 class="pricing-name">Бессрочная лицензия</h3>
                         <div class="pricing-price">
                             <span class="price-amount">500₽</span>
-                            <span class="price-period">одноразово</span>
+                            <span class="price-period">единоразово</span>
                         </div>
                     </div>
                     <ul class="pricing-features">
